Converge adapter report batch ownership